# Cognitiveclass-Computer-Vision-Hands-On-With-PyTorch

./: .gitignore  README.md  backup_DCGANs_using_PyTorch.ipynb  cancer-image-detection-with-pytorch.ipynb  human-portrait-drawing-with-u-squared-net.ipynb  ml_with_pytorch_model.pth  pyproject.toml  started_ml_pytorch.ipynb  use-object-detection-faster-r-cnn.ipynb
