[project]
name = "cognitiveclass-computer-vision-hands-on-with-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.11.99"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (==1.26.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "opencv-python (==4.11.0.86)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
